--- a/index.html
+++ b/index.html
@@ -3,11 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Single-page application</title>
-    <script src="scripts/jquery-3.1.1.min.js"></script>
+    <script src="scripts/libs/jquery-3.1.1.min.js"></script>
     <script src="scripts/app.js"></script>
-    <script src="scripts/views.js"></script>
-    <script src="scripts/authorization.js"></script>
-    <script src="scripts/utility.js"></script>
     <link rel="stylesheet" href="styles/main.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -20,12 +17,17 @@
         <a href="#" class="anonymous" id="registerNavigationLink">Register</a>
 
         <a href="#" class="user-only" id="homeUserNavigationLink">Home</a>
-        <a href="#" class="user-only" id="myMessagesNavigationLink">My Messages</a>
+        <a href="#" class="user-only" id="myMessagesNavigationLink">Messages</a>
         <a href="#" class="user-only" id="archiveNavigationLink">Archive</a>
-        <a href="#" class="user-only" id="sendMessageNavigationLink">Send Message</a>
+        <a href="#" class="user-only" id="sendMessageNavigationLink">send</a>
         <a href="#" class="user-only" id="logoutLink">Logout</a>
+        <!--<span id="spanLoggedInUser">Yooo, {user}!</span>-->
     </nav>
-    <span id="spanLoggedInUser">Welcome, {user}!</span>
+
+
+    <section id="loadingBox">loading...</section>
+    <section id="infoBox">info</section>
+    <section id="errorBox">error</section>
 
     <section id="viewAppHome">
         <div class="dog-container">
@@ -42,7 +44,7 @@
 
     <section id="viewLogin">
         <form id="loginForm">
-            <h1 class="login-title">have an account af? login:</h1>
+            <h1 class="login-title">have an account? login:</h1>
             <div class="login-component">
                 <label class="usernameLogin"></label>
                 <input type="text" name="username" id="loginUsername" placeholder="username" required>
@@ -74,7 +76,15 @@
         </form>
     </section>
 
+    <section id="viewUserHome">
+        <h1 id="viewUserHomeHeading">Welcome, {user}!</h1>
+        <a href="#" id="linkUserHomeMyMessages">My Messages</a>
+        <a href="#" id="linkUserHomeSendMessage">Send Message</a>
+        <a href="#" id="linkUserHomeArchiveSent">Archive (Sent)</a>
+    </section>
+
 </div>
+
 <footer>
     <i class="fa fa-paw first" aria-hidden="true"></i>
     DOGGO Messaging System - Simple SPA Application
