--- a/index.html
+++ b/index.html
@@ -12,18 +12,16 @@
 
 <div id="container">
     <nav id="navigation">
-        <a href="#" class="anonymous" id="homeAppNavigationLink">Home</a>
-        <a href="#" class="anonymous" id="loginNavigationLink">Login</a>
-        <a href="#" class="anonymous" id="registerNavigationLink">Register</a>
+        <a href="#" class="anonymous" id="homeAppNavigationLink">home</a>
+        <a href="#" class="anonymous" id="loginNavigationLink">login</a>
+        <a href="#" class="anonymous" id="registerNavigationLink">register</a>
 
-        <a href="#" class="user-only" id="homeUserNavigationLink">Home</a>
-        <a href="#" class="user-only" id="myMessagesNavigationLink">Messages</a>
-        <a href="#" class="user-only" id="archiveNavigationLink">Archive</a>
-        <a href="#" class="user-only" id="sendMessageNavigationLink">send</a>
-        <a href="#" class="user-only" id="logoutLink">Logout</a>
-        <!--<span id="spanLoggedInUser">Yooo, {user}!</span>-->
+        <a href="#" class="user-only" id="homeUserNavigationLink">home</a>
+        <a href="#" class="user-only" id="chattingNavigationLink">chat wolf woolf</a>
+        <a href="#" class="user-only" id="logoutLink">go to sleep</a>
+
+
     </nav>
-
 
     <section id="loadingBox">loading...</section>
     <section id="infoBox">info</section>
